@@ -1,13 +1,13 @@
 package me.lemon553311.battlemusic.config;
 
 import me.lemon553311.battlemusic.BattleMusicClient;
-
-import net.fabricmc.loader.api.FabricLoader;
+import me.lemon553311.battlemusic.platform.Platform;
 
 import com.google.gson.Gson;
 import com.google.gson.GsonBuilder;
 
 import java.io.IOException;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.ArrayList;
@@ -153,7 +153,8 @@ public class BattleMusicConfig {
 
 	private static final Gson GSON = new GsonBuilder().setPrettyPrinting().create();
 	private static Path path() {
-		return FabricLoader.getInstance().getConfigDir().resolve("battlemusic.json");
+		// Loader-neutral: FabricLoader on Fabric, FMLPaths on Forge/NeoForge.
+		return Platform.configDir().resolve("battlemusic.json");
 	}
 
 	@SuppressWarnings("null")
@@ -162,7 +163,7 @@ public class BattleMusicConfig {
 
 		try {
 			if (Files.exists(p)) {
-				String json = Files.readString(p);
+				String json = new String(Files.readAllBytes(p), StandardCharsets.UTF_8);
 				BattleMusicConfig cfg = GSON.fromJson(json, BattleMusicConfig.class);
 
 				if (cfg != null) {
@@ -185,7 +186,7 @@ public class BattleMusicConfig {
 
 		try {
 			Files.createDirectories(path().getParent());
-			Files.writeString(path(), GSON.toJson(this));
+			Files.write(path(), GSON.toJson(this).getBytes(StandardCharsets.UTF_8));
 
 		} catch (IOException e) {
 			BattleMusicClient.LOGGER.warn("Failed to save config", e);
